After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770549 - Better handling of mount errors
Better handling of mount errors
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: webdav backend
git master
Other All
: Normal normal
: ---
Assigned To: Christian Kellner
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2016-08-29 12:54 UTC by Christian Kellner
Modified: 2016-09-12 12:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to change mount error handling (3.95 KB, patch)
2016-08-29 13:18 UTC, Christian Kellner
none Details | Review
dav: Try also root when looking for the shortest prefix (1.06 KB, patch)
2016-08-29 13:27 UTC, Ondrej Holy
none Details | Review
Better error handling during mount (4.27 KB, patch)
2016-08-29 14:14 UTC, Christian Kellner
committed Details | Review
Cleanup in case of error during mount (887 bytes, patch)
2016-08-29 14:14 UTC, Christian Kellner
committed Details | Review
Return proper error code in case of cancellation during mount (1.28 KB, patch)
2016-08-29 14:15 UTC, Christian Kellner
committed Details | Review
Better error message for a corner case during mount (1.11 KB, patch)
2016-08-29 14:16 UTC, Christian Kellner
committed Details | Review
dav: Try also root when looking for the shortest prefix (1.06 KB, patch)
2016-08-30 12:24 UTC, Ondrej Holy
committed Details | Review

Description Christian Kellner 2016-08-29 12:54:04 UTC
Currently we have a few open TODO items in the day backend when mounting fails: we leak some things, and have a duplicated error message condition. Also we don't handle cancellation of the auth dialog.
Comment 1 Ondrej Holy 2016-08-29 13:18:05 UTC
Christian has already proposed fixes for those issues on his github:
https://github.com/gicmo/gvfs/commits/davmnterr
Comment 2 Christian Kellner 2016-08-29 13:18:32 UTC
Created attachment 334363 [details] [review]
Patch to change mount error handling
Comment 3 Ondrej Holy 2016-08-29 13:24:43 UTC
Review of attachment 334363 [details] [review]:

Thanks for the patch! 

Please create the patches using the git format-patch next time...

Add the link for this bug in the bug description please.

::: c/daemon/gvfsbackenddav.c
@@ +1940,3 @@
     if (is_collection == FALSE)
       break;
+

Please do not change whitespace independently.

@@ +1997,3 @@
+
+          if (error_code == G_IO_ERROR_CANCELLED)
+            error_code = G_IO_ERROR_FAILED_HANDLED;

It is ok, but please add a comment in the commit description describing why we need it and that it is same as in another backends...

@@ +2005,3 @@
       else
+        {
+          /* This is means, we have a valid DAV header, PROPFIND worked,

"This is means" should be "This means" probably...

@@ +2010,3 @@
+                            G_IO_ERROR, G_IO_ERROR_FAILED,
+                            _("Could not find an enclosing directory"));
+        }

I am convinced that this else-statement should be before the previous elseif-statement:

$ gvfs-mount dav://notexisting/
Error mounting location: HTTP Error: Error resolving 'notexisting': No address associated with hostname --> OK
$ gvfs-mount dav://example.com/
Error mounting location: Not a WebDAV enabled share --> OK
$ gvfs-mount dav://www.ajaxfilebrowser.com/notexisting
Error mounting location: HTTP Error: Not Found --> I think we should see "Could not find an enclosing directory" in this case
$ gvfs-mount http://www.ajaxfilebrowser.com/User6e06bc4
 --> OK

@@ +2014,3 @@
+      g_object_unref (msg_opts);
+      g_object_unref (msg_stat);
+      soup_uri_free (mount_base);

Be careful, do_mount contains the following line and g_vfs_backend_http_finalize calls soup_uri_free on backend->mount_base, which causes segfaults in some cases (e.g. $ gvfs-mount dav://www.ajaxfilebrowser.com/notexisting)...
G_VFS_BACKEND_HTTP (backend)->mount_base = mount_base;
Comment 4 Ondrej Holy 2016-08-29 13:27:34 UTC
Created attachment 334365 [details] [review]
dav: Try also root when looking for the shortest prefix

Dav backend always tries to mount WebDAV share with the shortest prefix. Unfortunately, it never tries the root when looking for it excepting the case, when the root is already specified.

The patch just fixes the already implemented behavioral, though I am not sure this is the best idea, because a parent dir might be completely different webdav share, so it might cause problems...

E.g. http://www.ajaxfilebrowser.com/User6e06bc4

http://www.ajaxfilebrowser.com/ mount doesn't contain folder User6e06bc4...
Comment 5 Christian Kellner 2016-08-29 13:40:50 UTC
> $ gvfs-mount dav://www.ajaxfilebrowser.com/notexisting
> Error mounting location: HTTP Error: Not Found --> I think we should see
> "Could not find an enclosing directory" in this case

This works as intended. All HTTP errors (except a 405 from OPTIONS) were intended to be reported in the second if case. Only the case where we have a DAV header, PROPFIND worked and we are just not in a dav::collection (very academical case indeed) were supposed to be handled in the last case. But maybe the whole "HTTP Error: XXXX" is confusing (and most likely irrelevant) and we can just have two conditions a) we detect it is not a WebDAV share (OPTIONS works but not no DAV header) and everything else ("Could not find an enclosing Directory")?
Comment 6 Ondrej Holy 2016-08-29 13:45:49 UTC
Sorry, I made a typo, http://www.ajaxfilebrowser.com/User6e06bc4 should be with dav:// prefix obviously...
Comment 7 Christian Kellner 2016-08-29 14:14:06 UTC
Created attachment 334372 [details] [review]
Better error handling during mount
Comment 8 Christian Kellner 2016-08-29 14:14:58 UTC
Created attachment 334373 [details] [review]
Cleanup in case of error during mount
Comment 9 Christian Kellner 2016-08-29 14:15:56 UTC
Created attachment 334374 [details] [review]
Return proper error code in case of cancellation during mount
Comment 10 Christian Kellner 2016-08-29 14:16:44 UTC
Created attachment 334375 [details] [review]
Better error message for a corner case during mount
Comment 11 Ondrej Holy 2016-08-29 14:22:07 UTC
Review of attachment 334372 [details] [review]:

Looks good, thanks!

Please announce the string changes to both gnome-i18n@ and gnome-doc-list@, see for details: 
https://wiki.gnome.org/ThreePointTwentyone#d2016-08-15
Comment 12 Ondrej Holy 2016-08-29 14:22:10 UTC
Review of attachment 334373 [details] [review]:

Looks good, thanks!
Comment 13 Ondrej Holy 2016-08-29 14:22:33 UTC
Review of attachment 334374 [details] [review]:

Looks good, thanks!
Comment 14 Ondrej Holy 2016-08-29 14:22:37 UTC
Review of attachment 334375 [details] [review]:

Looks good, thanks!
Comment 15 Christian Kellner 2016-08-29 14:26:09 UTC
(In reply to Ondrej Holy from comment #4)
 
> The patch just fixes the already implemented behavioral, though I am not
> sure this is the best idea, because a parent dir might be completely
> different webdav share, so it might cause problems...

Yeah, this is already the case if /foo/bar is a different webdav share then /foo. Not sure we can do much about it. We do detect changes in realm and then don't try to reuse the credentials, so if the realm changes we would stop at /foo.
Comment 16 Christian Kellner 2016-08-29 14:29:22 UTC
Review of attachment 334365 [details] [review]:

Good catch! Looks good to me!
Comment 17 Ondrej Holy 2016-08-29 15:39:47 UTC
Comment on attachment 334372 [details] [review]
Better error handling during mount

commit 99223f68c7d777dfca44d5d0fd8bbe0bb7640923
Comment 18 Ondrej Holy 2016-08-29 15:39:49 UTC
Comment on attachment 334373 [details] [review]
Cleanup in case of error during mount

commit 3c147616d5fbdf2aa22ef21aae9d38cf55675c6c
Comment 19 Ondrej Holy 2016-08-29 15:39:50 UTC
Comment on attachment 334374 [details] [review]
Return proper error code in case of cancellation during mount

commit 5a560b96d1e72efe104c3145893f0207436e3156
Comment 20 Ondrej Holy 2016-08-29 15:39:52 UTC
Comment on attachment 334375 [details] [review]
Better error message for a corner case during mount

commit b0e0f847a374d85547fe2ebbbe4b4c6e3c52244c
Comment 21 Ondrej Holy 2016-08-29 15:41:08 UTC
Comment on attachment 334365 [details] [review]
dav: Try also root when looking for the shortest prefix

I've not pushed this one, because it breaks the test suite and I don't have time to fix it right now...
Comment 22 Ondrej Holy 2016-08-30 12:24:06 UTC
Created attachment 334434 [details] [review]
dav: Try also root when looking for the shortest prefix

Ah, the test suite failures were caused by backend crashes due to NULL pointer passed in strcmp, because last_good_path may be NULL in case of https...
Comment 23 Christian Kellner 2016-08-30 16:23:08 UTC
Review of attachment 334434 [details] [review]:

Looks good!
Comment 24 Ondrej Holy 2016-09-12 12:33:19 UTC
Comment on attachment 334434 [details] [review]
dav: Try also root when looking for the shortest prefix

I marked the patch as "commit_after_freeze" initially, but the hard code freeze begins today, so I've pushed it as commit c4d92cf...