dav: better error handling during mount

If we can detect that a location is not a webdav share then prefer
that error message over any other. For other error cases also take
errors from the PROPFIND call into account. Translate the status
code into a proper GIO error code.

https://bugzilla.gnome.org/show_bug.cgi?id=770549